@@ -1,4 +1,5 @@
 - need ExtUtils::F77 import to work at least on FreeBSD
+- disable calls to pgmtext(!) in tests on FreeBSD
 
 2.26 2021-02-15
 - ExtUtils::F77 is not a runtime requirement
